RESOLVED FIXED115290
[WK2] Regression tests that reference a non-local resource crash with NetworkProcess enabled
https://bugs.webkit.org/show_bug.cgi?id=115290
Summary [WK2] Regression tests that reference a non-local resource crash with Network...
Alexey Proskuryakov
Reported 2013-04-26 16:47:35 PDT
WebKitTestRunner bundle client denies loading non-local resources, and WebResourceLoadScheduler is not prepared to deal with it. In fact, any client could deny a request for any reason, so this is more than a tools issue.
Attachments
proposed fix (2.35 KB, patch)
2013-04-26 17:09 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2013-04-26 17:09:47 PDT
Created attachment 199876 [details] proposed fix
WebKit Commit Bot
Comment 2 2013-04-27 16:01:45 PDT
Comment on attachment 199876 [details] proposed fix Clearing flags on attachment: 199876 Committed r149246: <http://trac.webkit.org/changeset/149246>
WebKit Commit Bot
Comment 3 2013-04-27 16:01:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.