Regression tests that reference a non-local resource crash with NetworkProcess enabled https://bugs.webkit.org/show_bug.cgi?id=115290

Reviewed by Sam Weinig.

Covered by fast/dom/icon-url-change.html and many other existing tests.

* WebProcess/Network/WebResourceLoadScheduler.cpp:
(WebKit::WebResourceLoadScheduler::remove): Handle this case. Architecturally, it
would be better if SubresourceLoad::create just created an object an didn't do
further checks before returning a pointer, but changing that is beyond the scope
of the fix.


Canonical link: https://commits.webkit.org/133736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149246 268f45cc-cd09-0410-ab3c-d52691b4dbfc